# set-project-web

./: .gitignore  README.md  pyproject.toml
.claude/: .wt-version
.claude/agents/: code-reviewer.md
.claude/commands/wt/: audit.md  help.md  inbox.md  msg.md  plan-review.md  status.md
docs/: plugin-architecture.md  template-reference.md  verification-rules-reference.md
openspec/changes/modular-templates-and-harvest/: design.md  proposal.md  tasks.md
openspec/changes/project-type-resolver/: tasks.md
openspec/changes/template-inheritance/: design.md  proposal.md  tasks.md
openspec/changes/web-design-integration/: design.md  proposal.md  tasks.md
openspec/changes/web-knowledge-foundation/: tasks.md
openspec/specs/template-deploy/: spec.md
set/plugins/: project-type.yaml
set_project_web/: __init__.py  base.py  cli.py  planning_rules.txt  project_type.py
set_project_web/directives/: i18n-serialization.yaml  smoke-test.yaml
set_project_web/templates/nextjs/: jest.config.ts  project-knowledge.yaml  tsconfig.json
set_project_web/templates/spa/: project-knowledge.yaml
set_project_web/verification-rules/: SCHEMA.md  component-conventions.yaml  migration-safety.yaml  route-listing-completeness.yaml
tests/: test_bootstrap.py
wt/plugins/: project-type.yaml
wt_project_web/: cli.py  planning_rules.txt  project_type.py
wt_project_web/directives/: context-efficiency.yaml  cross-cutting-review.yaml  post-merge.yaml  smoke-test.yaml
wt_project_web/verification-rules/: cross-cutting-consistency.yaml  i18n-completeness.yaml  route-registered.yaml
(+39 files in other folders)
